tests/unchecked_node_module_vs_lib/unchecked_node_module_vs_lib.exp
Error ---------------------------------------------------------------------------------------------------- test.js:12:18

Cannot assign `buffer.INSPECT_MAX_BYTES` to `b` because number [1] is incompatible with boolean [2]. [incompatible-type]

   test.js:12:18
    12| var b: boolean = buffer.INSPECT_MAX_BYTES; // error, number ~/> boolean
                         ^^^^^^^^^^^^^^^^^^^^^^^^

References:
   <BUILTINS>/node.js:127:34
   127|   declare var INSPECT_MAX_BYTES: number;
                                         ^^^^^^ [1]
   test.js:12:8
    12| var b: boolean = buffer.INSPECT_MAX_BYTES; // error, number ~/> boolean
               ^^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- test.js:22:23

Cannot resolve module `./buffer`. [cannot-resolve-module]

   22| var buffer2 = require("./buffer");
                             ^^^^^^^^^^


Error ---------------------------------------------------------------------------------------------------- test.js:25:23

Cannot resolve module `./buffer.js`. [cannot-resolve-module]

   25| var buffer3 = require("./buffer.js");
                             ^^^^^^^^^^^^^



Found 3 errors
